# AOC

./: .gitignore  Cargo.toml  aoc.nu  clippy.toml  justfile  rustfmt.toml
2023/: benchmarks.txt
2023/rust/day-01/: Cargo.toml
2023/rust/day-01/benches/: benchmarks.rs
2023/rust/day-01/src/: part1.rs  part2.rs
2023/rust/day-03/: Cargo.toml
2023/rust/day-03/benches/: benchmarks.rs
2023/rust/day-03/src/: part1.rs  part1_naive.rs  part2.rs  part2_naive.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/benches/: benchmarks.rs
2023/rust/day-04/src/: part1.rs  part2.rs
2023/rust/day-05/: Cargo.toml
2023/rust/day-05/benches/: benchmarks.rs
2023/rust/day-05/src/: part1.rs  part2.rs  part2_1ms.rs
2023/rust/day-06/: Cargo.toml
2023/rust/day-06/benches/: benchmarks.rs
2023/rust/day-06/src/: lib.rs  part1.rs  part2.rs
2023/rust/day-07/: Cargo.toml
2023/rust/day-07/benches/: benchmarks.rs
2023/rust/day-07/src/: part1.rs  part2.rs
2023/rust/day-08/: Cargo.toml
2023/rust/day-08/benches/: benchmarks.rs
2023/rust/day-08/src/: part1.rs  part2.rs
2023/rust/day-09/: Cargo.toml  ReadMe.md
2023/rust/day-09/benches/: benchmarks.rs
2023/rust/day-09/src/: part1.rs
2024/rust/day-01/: TASKS.md
2024/rust/day-01/benches/: benchmarks.rs
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/: TASKS.md
2024/rust/day-02/benches/: benchmarks.rs
2024/rust/day-02/src/: part2.rs
2024/rust/day-03/: Cargo.toml  TASKS.md
2024/rust/day-03/benches/: benchmarks.rs
template/benches/: benchmarks.rs
template/src/: lib.rs  part1.rs
(+1 files in other folders)
