[workspace]
resolver = "2"
members = ["*/rust/day-*", "aoc"]

[workspace.dependencies]
aoc = { path = "./aoc" }
itertools = "0.13.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
divan = "0.1.3"
tracing-tracy = "0.10.4"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.50"
dhat = "0.3.2"
pretty_assertions = "1.4.0"
hashbrown = { version = "0.14.3", features = ["rayon"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"

[profile.bench]
codegen-units = 1
incremental = false
lto = "fat"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
